<resources>
    <string name="app_name">Ordering</string>
    <string name="viewimage">viewimage</string>
    <string name="title_activity_scrolling_activityordering">ScrollingActivity</string>
    <string name="large_text">
        
    </string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnCancel">Cancel Order</string>
    <string name="btnOConfirm">Order Confirmation</string>
    <string name="decreacebtn">decrement</string>
    <string name="increasebtn">increment</string>
    <string name="product_name">product name</string>
    <string name="product_details">Product details</string>
    <string name="quantity">Quantity</string>
    <string name="decreasebtn">-</string>
    <string name="inreasebtn">+</string>
    <string name="todo">TODO</string>
    <string name="totcharge">Total Charge :</string>
    <string name="name">Name :</string>
    <string name="contact">Contact No :</string>
    <string name="address">Address :</string>

    <string-array name="Select">
        <item>Cash</item>
        <item>Credit Card</item>
        <item>Debit Card</item>
    </string-array>
    <string name="title_activity_orderconfirmation">ScrollingActivity</string>
    <string name="btnOplacement">Order Placement</string>
    <string name="btnpay">Pay Now</string>
    <string name="itemadd">+</string>
    <string name="items">Items</string>
    <string name="onbtn">newNote</string>
    <string name="order">Order</string>
    <string name="btnsave">Save</string>
    <string name="food_details">Food Details</string>
    <string name="save">Save</string>
    <string name="btninsert">Insert Order</string>
    <string name="btnupdate">Update Order</string>
    <string name="btndelete">Delete Order</string>
    <string name="btndisplay">Display Order</string>
    <string name="value">Value</string>
    <string name="payment">Payment Method :</string>
    <string name="tttttttt">"C KATUKURUNDA,0701088222,Badulla ,Credit Card "</string>

</resources>