<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/btndisplay"
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:onClick="goToDisplay"
        android:text="@string/btndisplay"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/btncol" />

    <Button
        android:id="@+id/btninsert"
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:onClick="goToInsert"
        android:text="@string/btninsert"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:backgroundTint="@color/btncol" />

    <Button
        android:id="@+id/btnupdate"
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:text="@string/btnupdate"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/btncol" />

    <Button
        android:id="@+id/btndelete"
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:text="@string/btndelete"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/btncol" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="738dp"
        app:srcCompat="@drawable/logo1"
        android:contentDescription="@string/todo" />

</LinearLayout>