<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".OrderConfirmation">

    <TextView
        android:id="@+id/userdetails"
        android:layout_width="337dp"
        android:layout_height="134dp"
        android:layout_marginStart="155dp"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="199dp"
        android:layout_marginRight="199dp"
        android:layout_marginBottom="658dp"
        android:background="#CCC0C0"
        android:text="@string/tttttttt"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="332dp"
        android:layout_height="169dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.286"
        app:srcCompat="@drawable/foods" />

    <TextView
        android:id="@+id/orderDetails"
        android:layout_width="325dp"
        android:layout_height="299dp"
        android:background="#C1BABA"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78" />

    <Button
        android:id="@+id/btncancel2"
        android:layout_width="164dp"
        android:layout_height="65dp"
        android:fontFamily="sans-serif"
        android:text="@string/btnCancel"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="@color/btncol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/btnOplace"
        android:layout_width="160dp"
        android:layout_height="64dp"
        android:onClick="readNext"
        android:text="@string/btnOplacement"
        android:textStyle="bold"
        app:backgroundTint="@color/btncol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.974" />

</androidx.constraintlayout.widget.ConstraintLayout>