<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".itemdetails">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/back"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">


        <Button
            android:id="@+id/btnsave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/white"
            android:onClick="saveNote"
            android:text="@string/save"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            app:backgroundTint="@color/back"
            app:iconTint="@color/white"
            tools:layout_editor_absoluteX="323dp" />

        <TextView
            android:id="@+id/txtoItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/order"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="93dp"
            tools:layout_editor_absoluteY="10dp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/txtitem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="Food Item"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/iteminsert"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtdetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/food_details"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/insertdetails"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:minLines="4"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btndelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:onClick="deleteNote"
        android:text="delete"
        android:textColor="@color/red"
        android:textSize="25sp"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:iconTint="@color/white" />

</LinearLayout>